--- a/Presentation/POP_2017_STAR_Data_Presentation.tex
+++ b/Presentation/POP_2017_STAR_Data_Presentation.tex
@@ -199,6 +199,18 @@ University of Washington$^2$ \\
   \end{center}
 \end{frame}
 
+\begin{frame}{Comparison between 2011 and 2017}
+  \begin{center}
+    \includegraphics[scale = 0.50]{figures/2011_2017_Bratio.png}
+  \end{center}
+\end{frame}
+
+\begin{frame}{2011 Model Update}
+  \begin{center}
+    \includegraphics[scale = 0.50]{figures/compare4_Bratio_uncertainty.png}
+  \end{center}
+\end{frame}
+
 \subsection{Uncertainties}
 \begin{frame}
   \begin{itemize}
