--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -2,14 +2,13 @@
 #Executive Summary{-}
 
 ##Stock{-}
-This assessment reports the status of the `r spp` rockfish (\emph{`r spp.sci`})  off the US west coast from Northern California to the Canadian Border using data 
-through `r LastYR`.  `r spp` are most abundant in the Gulf of Alaska and have observed off of Japan, in the Bering Sea, and south to Baja California, although they are sparse south of Oregon and rare in southern California. Although catches north of the US-Canada border were not included in this assessment, it is not certain the connectivity of these populations with contribution to the biomass possibly through adult migration and/or larval dispersion. To date, no significant genetic differences have been found in the range covered by this assessment.
+This assessment reports the status of the `r spp` rockfish (\emph{`r spp.sci`})  off the US west coast from Northern California to the Canadian Border using data through `r Dat_end_mod1`.  `r spp` are most abundant in the Gulf of Alaska and have been observed off of Japan, in the Bering Sea, and south to Baja California, though they are sparse south of Oregon and rare in southern California. Although neither catches nor other data from north of the US-Canada border were included in this assessment, the conectivity of these populations and the contribution to the biomass possibly through adult migration and/or larval dispersion is not certain. To date, no significant genetic differences have been found in the range covered by this assessment.
 
 
 ##Landings{-}
-The first year that harvest of `r spp` exceeded 1 mt off the US west coast first occurred in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals occurring between 1966-1968 were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in recent years since the declaration.  Since 2000, landings of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with landings in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
+Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals, occurring between 1966-1968, were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in recent years since the declaration.  Since 2000, landings of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with landings in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
 
-`r spp` are a desirable market species and discarding has historically been low.  However, management restrictions (e.g. trip limits) have resulted in increased discarding since the early 1990s.  During the 2000s discarding increased for `r spp` due to harvest restrictions imposed to allow rebuilding, with estimated discard rates from the bottom trawl fishery peaking in 2009 and 2010 to discard rates of `r paste0(round(100*max(mod1$discard[mod1$discard$Yr ==2009, "Obs"], mod1$discard[mod1$discard$Yr ==2010, "Obs"]),1),'%')`, prior to implementation of catch shares in 2011.  Since 2011, discarding of `r spp` has been estimated to be less than `r paste0(round(100*max(mod1$discard[mod1$discard$Yr >=2011, "Obs"]),1),'%')` based on observer data.
+`r spp` are a desirable market species and discarding has historically been low.  However, management restrictions (e.g. trip limits) resulted in increased discarding starting in the early 1990s.  During the 2000s discarding increased for `r spp` due to harvest restrictions imposed to allow rebuilding, with estimated discard rates from the bottom trawl fishery peaking in 2009 and 2010 about about `r paste0(round(100*max(mod1$discard[mod1$discard$Yr ==2009, "Obs"], mod1$discard[mod1$discard$Yr ==2010, "Obs"]),0),'%')`, prior to implementation of catch shares in 2011.  Since 2011, discarding of `r spp` has been estimated to be less than `r paste0(round(100*max(mod1$discard[mod1$discard$Yr >=2011, "Obs"]),1),'%')`.
 
 
 <!-- ***********CATCH TABLE************************************************ -->
@@ -37,19 +36,19 @@ The first year that harvest of `r spp` exceeded 1 mt off the US west coast first
 \FloatBarrier
 
 ##Data and Assessment{-}
-This a new full assessment for `r spp` which was last assessed in 2011.  In this assessment, aspects of the model including landings, data, and modelling assumptions were re-evaluated as much as possible. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled to allow separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR`, and forecasted beyond `r LastYR`.
+This a new full assessment for `r spp` which was last assessed in 2011.  In this assessment, aspects of the model including landings, data, and modelling assumptions were re-evaluated. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled allowing separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR`, and forecasted beyond `r LastYR`.
 
-All of the sources of data for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit time series. Changes of varying degrees have occurred in the data from those used in previous assessments. These current data represent the best available scientific information. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery-independent data source.
+All of the data sources for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit time series. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery-independent data source.
 
 The definition of fishing fleets have been changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl and fixed gear fleet where only a small fraction of `r spp` occurring by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the At-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based upon discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the At-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
 
-The assessment uses landings data and discard-fraction estimates; catch-per-unit-of-effort and survey indices; length or age composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; priors on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium biomass", length-based selectivity of the fishery and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of biomass, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality and steepness were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them was deemed the best way to characterize uncertainty.
+The assessment uses landings data and discard-fraction estimates; catch-per-unit-of-effort and survey indices; length or age composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fishery and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of biomass, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality and steepness were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
 
-Although there are many types of data available for `r spp` since the 1980s, which were used in this assessment, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
+Although there are many types of data available for `r spp` since the 1980s which were used in this assessment, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of highly variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
 
-A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in US waters, and the effect of climatic variables on recruitment, growth and survival of `r spp`.
+A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in US waters, and the effect of climatic variables on recruitment, growth and survival.
 
-A reference case was selected which adequately captures the central tendency for those sources of uncertainty considered in the model.
+A base model was selected which best captures the central tendency for those sources of uncertainty considered in the model.
 
 <!--Map of assessment region: (Figure \ref{fig:assess_region_map}).  
  
@@ -57,7 +56,7 @@ A reference case was selected which adequately captures the central tendency for
 
 
 ##Stock Biomass{-}
-The predicted spawning biomass from the base model generally showed a slight decline over the time-series until 1966 when the foreign fleet began. A short, but sharp decline occurred, followed by a period of the stock biomass stabilizing or with a minimal decline until the late 1990s. The stock showed increases in stock size following the year 2000 due to a combination of strong recruitment and low catches. The `r LastYR` estimated spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass at `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning biomass is high.
+The predicted spawning output from the base model generally showed a slight decline prior to 1966 when fishing by the foreign fleet began. A short, but sharp decline occurred between 1966 and 1970, followed by a period of the spawning output stabilizing or with a minimal decline until the late 1990s. The stock showed increases in stock size following the year 2000 due to a combination of strong recruitment and low catches. The `r LastYR` estimated spawning output relative to unfished equilibrium spawning output is above the target of 40% of unfished spawning output at `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning output is high.
 
 <!--BEGIN  EXECUTIVE SUMMARY SPAWNING BIOMASS AND DEPLETE TABLES AND FIGURES-->
 ```{r, results='asis'}
@@ -72,7 +71,7 @@ The predicted spawning biomass from the base model generally showed a slight dec
 ![Time-series of spawning output trajectory (circles and line: median; light broken lines: 95% credibility intervals) for the base assessment model.  \label{fig:Spawnbio_all}](`r spawn.file`)
 
 
-![Estimated relative spawning biomass (depletion) with approximate 95% asymptotic confidnce intervals (dashed lines) for the base assessment model. \label{fig:RelDeplete_all}](`r Bratio.file`)
+![Estimated relative spawning output (depletion) with approximate 95% asymptotic confidnce intervals (dashed lines) for the base assessment model. \label{fig:RelDeplete_all}](`r Bratio.file`)
 
 <!--BEGIN  EXECUTIVE SUMMARY SPAWNING BIOMASS AND DEPLETE TABLES AND FIGURES-->
 ```{r, results='asis'}
@@ -85,7 +84,7 @@ The predicted spawning biomass from the base model generally showed a slight dec
 
 
 ##Recruitment{-}
-Recruitment deviations were estimated for the entire time-series modeled. There is little information regarding recruitment prior to 1965, and the uncertainty in these estimates is expressed in the model. Historically, there are estimates of large recruitments in 1999 and 2000.  In recent years, a recruitment of unprecedented size is estimated to have occurred in 2008 but is highly uncertain.  Additionally, there is early evidence of a strong recruitment in 2013.  The four lowest recruitments estimated within the model (in ascending order) occurred in `r recdev.lowest[1]`, `r recdev.lowest[2]`, `r recdev.lowest[3]`, and `r recdev.lowest[4]`.  
+Recruitment deviations were estimated for the entire time-series modeled. There is little information regarding recruitment prior to 1965, and the uncertainty in these estimates is expressed in the model. Historically, there are estimates of large recruitments in 1999 and 2000.  In recent years, a recruitment of unprecedented size is estimated to have occurred in 2008.  Additionally, there is early evidence of a strong recruitment in 2013.  The four lowest recruitments estimated within the model (in ascending order) occurred in `r recdev.lowest[1]`, `r recdev.lowest[2]`, `r recdev.lowest[3]`, and `r recdev.lowest[4]`.  
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY RECRUITMENT TABLES AND FIGURES***** -->
 ```{r, results='asis'}
@@ -104,7 +103,7 @@ Recruitment deviations were estimated for the entire time-series modeled. There 
 
 
 ##Exploitation status{-}
-The spawning biomass of `r spp` reached a low in `r low.ssb`.  Landings for `r spp` decreased significantly in 2000 compared to previous years. The estimated relative biomass was possibly below the overfished level in the early 2000s, but has likely remained above that level otherwise, and currently is significantly greater than the 40% unfished spawning biomass target. Throughout the late 1960s and 1970s the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were mostly above target levels. Recent exploitation rates on `r spp` were predicted to be significantly below target levels.
+The spawning output of `r spp` reached a low in `r low.ssb`.  Landings for `r spp` decreased significantly in 2000 compared to previous years. The estimated relative depletion was possibly below the overfished level in the early 2000s, but has likely remained above that level otherwise, and currently is significantly greater than the 40% unfished spawning output target. Throughout the late 1960s and 1970s the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were mostly above target levels. Recent exploitation rates on `r spp` were predicted to be significantly below target levels.
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY EXPLOITATION AND******************* -->
@@ -120,26 +119,26 @@ The spawning biomass of `r spp` reached a low in `r low.ssb`.  Landings for `r s
 
 \FloatBarrier
 
-![Estimated spawning potential ratio (1-SPR)/(1-SPR50%) for the base-case model. One minus SPR is plotted so that higher exploitation rates occur on the upper portion of the y-axis. The management target is plotted as a red horizontal line and values above this reflect harvests in excess of the overfishing proxy based on the SPR50% harvest rate. The last year in the time series is `r Dat_end_mod1`. \label{fig:SPR_all}](`r SPR.file`)
+![Estimated spawning potential ratio (1-SPR)/(1-SPR50%) for the base model. One minus SPR is plotted so that higher exploitation rates occur on the upper portion of the y-axis. The management target is plotted as a red horizontal line and values above this reflect harvests in excess of the overfishing proxy based on the SPR50% harvest rate. The last year in the time series is `r Dat_end_mod1`. \label{fig:SPR_all}](`r SPR.file`)
 
 
-![Phase plot of estimated relative (1-SPR)/(1-SPR50%) vs. relative spawning biomass for the base case model. Relative biomass is the annual spawning biomass divided by the unfished spawning biomass. \label{fig:Phase_all}](`r Phase.file`)
+![Phase plot of estimated relative (1-SPR)/(1-SPR50%) vs. relative spawning output for the base case model. Relative depletion is the annual spawning output divided by the unfished spawning output. \label{fig:Phase_all}](`r Phase.file`)
 
 \FloatBarrier
 
 
 ##Ecosystem Considerations{-}
 
-Rockfish are an important component of the California Current ecosystem along the US west coast, with its more than sixty five species filling various niches in both soft and hard bottom habitats from the nearshore to the continental slope, as well as near bottom and pelagic zones. `r spp` are generally considered to be semi-demersal but, there can at times, be a significant pelagic component to their distribution.
+Rockfish are an important component of the California Current ecosystem along the US west coast, with more than sixty five species filling various niches in both soft and hard bottom habitats from the nearshore to the continental slope, as well as near bottom and pelagic zones. `r spp` are generally considered to be semi-demersal, but there can, at times be a significant pelagic component to their distribution.
 
-Recruitment is one mechanism by which the ecosystem may directly impact the population dynamics of `r spp`. The 1999 cohort for many species of rockfish was large - sometimes significantly so. Long-term averages suggesting that environmental conditions may influence the spawning success and survival of larvae and juvenile rockfish. `r spp` showed an above average recruitment deviation in 1999 and 2000. The specific pathways through which environmental conditions exert influence on `r spp` dynamics are unclear; however, changes in water temperature and currents, distribution of prey and predators, and the amount and timing of upwelling are all possible linkages. Changes in the environment may also result in changes in length-at-maturity, fecundity, growth, and survival which can affect the status of the stock and its susceptibility to fishing. Unfortunately, there are few data available for `r spp` that provide insights into these effects.
+Recruitment is one mechanism by which the ecosystem may directly impact the population dynamics of `r spp`. The 1999 cohort for many species of rockfish was large - sometimes significantly so. Long-term averages suggesting that environmental conditions may influence the spawning success and survival of larvae and juvenile rockfish. `r spp` showed above average recruitment deviations in 1999 and 2000. The specific pathways through which environmental conditions exert influence on `r spp` dynamics are unclear; however, changes in water temperature and currents, distribution of prey and predators, and the amount and timing of upwelling are all possible linkages. Changes in the environment may also result in changes in length-at-maturity, fecundity, growth, and survival which can affect the status of the stock and its susceptibility to fishing. Unfortunately, there are few data available for `r spp` that provide insights into these effects.
 
 Fishing has effects on both the age structure of a population, as well as the habitat with which the target species is associated. Fishing often targets larger, older fish, and years of fishing mortality results in a truncated age-structure when compared to unfished conditions. Rockfish are often associated with habitats containing living structure such as sponges and corals, and fishing may alter that habitat to a less desirable state. This assessment provides a look at the effects of fishing on age structure, and recent studies on essential fish habitat are beginning to characterize important locations for rockfish throughout their life history; however there is little current information available to evaluate the specific effects of fishing on the ecosystem issues specific to `r spp`.
 
 
 ##Reference Points{-}
 
-This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Deplete_mod1),2]-MT>0,"above","below")` the biomass target. Due to reduced landing and the large 2008 year-class, an increasing trend in spawning biomass was estimated in the base model. The estimated relative biomass level in `r LastYR` is `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`), corresponding to an unfished spawning output of `r paste(Spawn_mod1, fecund_unit,sep=' ')` (~95% asymptotic interval: `r paste(Spawn_mod1_CI, fecund_unit, sep=' ')`).  Unfished age `r min_age` biomass was estimated to be `r Ref_pts_mod1[2,2]` mt in the base model. The target spawning output based on the biomass target ($SB_{40\%}$) is `r paste(Ref_pts_mod1[7,2], fecund_unit,sep=' ')`, which gives a catch of `r Ref_pts_mod1[10,2]` mt. Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to $SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt.
+This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Deplete_mod1),2]-MT>0,"above","below")` the biomass target. Due to reduced landing and the large 2008 year-class, an increasing trend in spawning biomass was estimated in the base model. The estimated depletion in `r LastYR` is `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`), corresponding to an unfished spawning output of `r paste(Spawn_mod1, fecund_unit,sep=' ')` (~95% asymptotic interval: `r paste(Spawn_mod1_CI, fecund_unit, sep=' ')`).  Unfished age `r min_age` biomass was estimated to be `r Ref_pts_mod1[2,2]` mt in the base model. The target spawning output based on the biomass target ($SB_{40\%}$) is `r paste(Ref_pts_mod1[7,2], fecund_unit,sep=' ')`, with an equilibrium catch of `r Ref_pts_mod1[10,2]` mt. Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to $SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt. Estimated MSY catch is at a `r Ref_pts_mod1[20,2]` spawning output of `r paste(Ref_pts_mod1[17,2], fecund_unit,sep=' ')` (`r paste0(round(100 * as.numeric(Ref_pts_mod1[17,2])/as.numeric(Ref_pts_mod1[1,2]),1), "%")` depletion)
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY REFERENCE POINT TABLES************* -->
@@ -154,7 +153,7 @@ This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Dep
 
 
 ##Management Performance{-}
-Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the 1960s and 1970s, resulting in sharp declines in the spawning output. Exploitation rates subsequently declined to rates at or below the management target in the 1980s.  Management restrictions imposed in the 1990s further reduced exploitation rates. An overfished declaration for `r spp` resulted in very low exploitation rates since 2001 with the ACLs being set far below the OFL and ABC values.
+Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the 1960s and 1970s, resulting in sharp declines in the spawning output. Exploitation rates subsequently declined to rates at or below the management target in the 1980s.  Management restrictions imposed in the 1990s further reduced exploitation rates. An overfished declaration for `r spp` resulted in very low exploitation rates since 2001 with ACLs being set far below the OFL and ABC values.
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY MANAGEMENT PERFORMANCE TABLE******* --> 
@@ -215,6 +214,7 @@ There are many areas of research that could be improved to benefit the understan
 \item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understating regarding the steepness of US west coast `r spp` will reduce our uncertainty regarding current stock status.
 
 \item \textbf{Basin-wide understanding of stock structure, biology, connectivity, and distribution:} This is a stock assessment for `r spp` off of the west coast of the US and does not consider data from British Columbia or Alaska. Further investigating and comparing the data and predictions from British Columbia and Alaska to determine if there are similarities with the US west coast observations would help to define the connectivity between `r spp` north and south of the US-Canada border.
+ 
 
 \end{enumerate}
 
