--- a/1_Introduction.Rmd
+++ b/1_Introduction.Rmd
@@ -2,25 +2,25 @@
   
 #Introduction
   
-##Basic Information
+##Distribution and Stock Structure
 `r spp` (\emph{`r spp.sci`}) are most abundant in the Gulf of Alaska, and have been observed off of Japan, in the Bering Sea, and south to Baja California, although they are sparse south of Oregon and rare in southern California. While genetic studies have found three populations of `r spp` off of British Columbia related to unique geography and oceanic conditions [@seeb_genetic_1988; @withler_co-existing_2001] with, notably, a separate stock off of Vancouver Island, no significant genetic differences have been found in the range covered by this assessment. `r spp` show dimorphic growth, with females reaching a slightly large size than males. Males and females are equally abundant on rearing grounds at age 1.5.
 
 The `r spp` population has been modeled as a single stock off of the US west coast (essentially northern California to the Canadian border, since `r spp` are seen extremely rarely in central and southern California). Good recruitments show up in size-composition data throughout all portions of this area, which supports the single stock hypothesis. This assessment includes landings and catch data for `r spp` from the states of Washington, Oregon and California, along with records from foreign fisheries, the At-sea hake fleet, and fishery-independent surveys.
+
+##Historical and Current Fishery
 
 Prior to 1966, the `r spp` resource off of the northern portion of the US west coast was harvested almost entirely by Canadian and US vessels. Harvest was negligible prior to 1940, reached `r as.numeric(round(Tot.catch.df[Tot.catch.df[,1]==1950,2],0))` mt in 1950, `r as.numeric(round(Tot.catch.df[Tot.catch.df[,1]==1961,2],0))` mt in 1961 and  `r as.numeric(round(Tot.catch.df[Tot.catch.df[,1]==1965,2],0))` mt in 1965. Catches increased dramatically after 1965, with the introduction of large distant-water fishing fleets from the Soviet Union and Japan. Both nations employed large factory stern trawlers as their primary method for harvesting `r spp`.  Peak removals are estimated at `r as.numeric(round(Tot.catch.df[Tot.catch.df[,1]==1966,2],0))` mt in 1966 and `r as.numeric(round(Tot.catch.df[Tot.catch.df[,1]==1967,2],0))` mt in 1967. These numbers are based upon a re-analysis of the foreign catch data [@rogers_species_2003], which focused on deriving a more realistic species composition for catches previously identified only as `r spp`. Catches declined rapidly following these peak years, and `r spp` stocks were considered to be severely depleted throughout the Oregon-Vancouver Island region by 1969  [@gunderson_population_1977; @gunderson_status_1977]. Landed harvest averaged `r as.numeric(round(mean(Tot.catch.df[Tot.catch.df[,1]>=1977&Tot.catch.df[,1] <=1994,2],0)))` mt over the period 1977-94.  Landings have continued to decline since 1994, primarily due to more restrictive management (Table \ref{tab:Comm_Catch} and Figure \ref{fig:Catch}).
 
 Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the US. With implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, US territorial waters were extended to 200 miles from shore, and primary responsibility for management of the groundfish stocks off Washington, Oregon and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan for the West Coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted `r spp` stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978], the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia International North Pacific Fishery Commission (INPFC) area. To implement this strategy, the states of Oregon and Washington each established landing limits for `r spp`. Trawl trip limits of various forms remained in effect through `r Dat_end_mod1` (Table \ref{tab:Regs}).
 
-Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are highly biased by around age 10-12, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years. Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`. A coast-wide survey of the rockfish resource was conducted in 1977 [@gunderson_distribution_1980] and was repeated every three years through 2004 (referred to as the 'Triennial survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
 
-
-##Summary of Management History
+##Summary of Management History and Performance
 The landings of `r spp` have been historically governed by harvest guidelines and trip limits, while recently management has imposed total catch harvest limits in the form of overfishing limits (OFLs), acceptable biological catches (ABCs), and annual catch limits (ACLs). A trawl rationalization program, consisting of an individual fishing quota (IFQ) catch shares system was implemented in 2011 for the limited entry trawl fleet targeting non-whiting groundfish, including `r spp`, and the trawl fleet targeting and delivering whiting to shore-based processors. The limited entry at-sea trawl sectors (motherships and catch-processors) that target whiting and process at-sea are managed in a system of harvest cooperatives.
 
-Limits on `r spp` were first established in 1983 (Table \ref{tab:Regs}). These were implemented as area closures, trip limits, and cumulative landing limits. In 1999, `r spp` was declared overfished with the assessment estimating the spawning output below the management limit (25% of virgin biomass).  In reaction to the overfished decleration, harvest limits were reduced relative to previous years and a rebuilding plan was implemented in 2001 with recent ACLs being set well below the estimated OFLs (Table \ref{tab:mnmgt_perform_tables}).  
+Limits on `r spp` were first established in 1983 (Table \ref{tab:Regs}). These were implemented as area closures, trip limits, and cumulative landing limits. In 1999, `r spp` was declared overfished with the assessment estimating the spawning output below the management limit (25% of virgin biomass or output).  In reaction to the overfished decleration, harvest limits were reduced relative to previous years and a rebuilding plan was implemented in 2001 with recent ACLs being set well below the estimated OFLs (Table \ref{tab:mnmgt_perform_tables}).  
 
 
 ##Fisheries off Canada and Alaska
-`r spp` can be found in waters off the US west coast and northward through Alaskan waters.  In contrast the `r spp` stock off the US west coast, each assessed portion of the stock in Canada and Alaskan waters have historically been estimated to be above management targets. The subset of the stock off the US west coast represents the tail of the species distribution with little to no `r spp` being encountered south of northern California.  The most recent updated assessments for the Bering Sea and the Gulf of Alaska stocks determined that neither stock are in an overfished state and recommended and acceptable biological catch of 43,723 mt and 23,918 mt, respectively, for 2017. 
+`r spp` can be found in waters off the US west coast and northward through Alaskan waters.  In contrast the `r spp` stock off the US west coast, each assessed portion of the stock in Canada and Alaskan waters have historically been estimated to be above management targets. The subset of the stock off the US west coast represents the tail of the species distribution with little to no `r spp` being encountered south of northern California.  The most recent updated assessments for the Bering Sea and the Gulf of Alaska stocks determined that neither stock is in an overfished state and recommended acceptable biological catches of 43,723 mt and 23,918 mt, respectively, for 2017. 
 
 In Canadian waters `r spp` has the largest single-species quota, accounting for approximately 25% of all rockfish landings by weight in the bottom trawl fleet.  The Canadian `r spp` stock is broken into three separate areas that are individually assessed.  The status of the stock within each area are above Canadian management targets.  
