--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -8,6 +8,10 @@ Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}
 
 ##Fishery-Independent Data:
 
+Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`.  A coast-wide survey of the rockfish resource was conducted in 1977 [@gunderson_distribution_1980] and was repeated every three years through 2004 (referred to as the 'Triennial survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
+
+Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are highly biased by age 14, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years. Otoliths from fishery-independent and dependent sources that were only surface age reads were excluded from this assessment due to the bias associated with these age reads. 
+
 ###Northwest Fisheries Science Center (NWFSC) shelf-slope survey
 
 The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (approximately 700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
@@ -16,17 +20,17 @@ The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal 
 
 The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occurring at depths deeper than 300 m. Data collected by the NWFSC shelf-slope survey between depths of 55 - 549 m and north of $42^\circ$ and south of $49^\circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
 
-Length compositions were expanded based upon the stratification and the age data was used as conditional age-at-length data.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages were collected for `r spp` in nearly every tow (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
+Length compositions were expanded based upon the stratification and the age data was used as conditional age-at-length data.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages were collected for `r spp` in nearly every tow (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitments; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
-The effective sample sizes for length and marginal age composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] which determined that the approximate realized sample size for shelf/slope rockfish species was 2.43*$N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year.
+The input sample sizes for length and marginal age composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] which determined that the approximate realized sample size for shelf/slope rockfish species was 2.43*$N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year.
 
 ###Northwest Fisheries Science Center (NWFSC) slope survey  
 
-The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception between 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using a bayesian delta-GLMM and the VAST delta-GLMM models.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  Based on the diagnostics the bayesian delta-GLMM, which does not account for spatial effects, gamma distribution with year-vessel random effects was selected as the final model.  The Q-Q plot does show a minimal departure from the assumed distribution (Figure \ref{fig:nw_slope_qq}), but was determined to be acceptable based on the alternative model distributions.  The trend of abundance across the four surveys years was generally flat with high estimated annual variance.  Sensitivities were done evaluating the use of this index within the base model.
+The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception, from 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using a bayesian delta-GLMM and the VAST delta-GLMM models.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  Based on the diagnostics the bayesian delta-GLMM, which does not account for spatial effects, gamma distribution with year-vessel random effects was selected as the final model.  The Q-Q plot does show a minimal departure from the assumed distribution (Figure \ref{fig:nw_slope_qq}), but was determined to be acceptable based on the alternative model distributions.  The trend of abundance across the four surveys years was generally flat with high estimated annual variance.  Sensitivities were done evaluating the use of this index within the base model.
 
 Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratification (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}).  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 
 ###Alaska Fisheries Science Center (AFSC) slope survey 
@@ -35,9 +39,9 @@ The AFSC slope survey operated during autumn (October-November) aboard the R/V M
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
 
-Length compositions were available for each year the survey was conducted.  No age data were available from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), expect for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Length}). 
+Length compositions were available for each year the survey was conducted.  No age data were available from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Length}). 
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 ###Triennial Survey
 
@@ -45,13 +49,13 @@ The Triennial survey was first conducted by the AFSC in 1977 and spanned the tim
 
 Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the Triennial series, 2004, the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
 
-Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ N where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial survey was analyzed as a single time-series, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
+Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ N where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial survey was analyzed as a single time-series using data from sampling depths of 55 - 350 m, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:tri_qq}).  The index shows a decline in abundance in the early years of the time-series and abundance remaining flat for the latter years.  
 
 Length and age compositions were expanded based upon the stratification.  The number of tows with length data ranged from 17 in 1986 to 81 in 1998 (Table \ref{tab:TriennialLengths}).  Ages were read using surface reading methods until 1989 when the break-and-burn method replaced surface reads as the best method to age `r spp`.  Unfortunately, surface reading of `r spp` otoliths results in significant underestimates of age.  Due to this, these otoliths were excluded from analysis.  The available ages from the Triennial survey and the number of tows where otoliths were collected are shown in Table \ref{tab:Triennial_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 1995 (Figure \ref{fig:Tri_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999 and 2000 recruitment (Figure \ref{fig:Tri_Age}).
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 ###Pacific ocean perch Survey
 
@@ -59,7 +63,7 @@ A survey designed to sample `r spp` was conducted in 1979 and again in 1985 (for
 
 Length and age compositions were expanded based on the stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and ages were only available in 1985 due to surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
-The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
 
 <!-- ********************************************************************** -->
@@ -71,15 +75,15 @@ The effective sample sizes for length and marginal age composition data were cal
 
 **Washington**
 
-Historical commercial fishery landings of `r spp` from Washington for the years 1908-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and hence, the historical catches for Washington differ from those used in the 2011 assessment.  Due to recent corrections to the landings of `r spp` based upon market categories (1981-2016) were obtained directly from Washington state rather than from Pacific Fisheries Information Network (PacFIN).
+Historical commercial fishery landings of `r spp` in Washington for the years 1908-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and, hence, the historical catches for Washington differ from those used in the 2011 assessment.  WDFW also provided catches for 1981-2016 period to include re-distribution of the "URCK" landings in the PacFIN database.  These data are currently not available from PacFIN. 
 
 **Oregon**
 
-Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Whitman (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org.  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the landings data available for that period within PacFIN (Patrick Mirrick, personal communication, ODFW).
+Historical commercial fishery landings of `r spp` in Oregon for the years 1892-1986 were obtained from Alison Whitman (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN (retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).  The catch data from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the landings data available for that period within PacFIN (Patrick Mirrick, personal communication, ODFW).
 
 **California**
 
-Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey, also known as CALCOM (128.114.3.187) for the years 1916-1980. A description of the historical reconstruction methods can be found in [@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org.
+Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey data system, also known as CALCOM Database (128.114.3.187) for the years 1916-1980. A description of the historical reconstruction methods can be found in [@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN (retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
 
 **At-Sea Hake Fishery**
 
@@ -98,10 +102,10 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
 
 ###Historical Commercial Catch-per-unit effort
 
-Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary}, from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary}, from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggests that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
 ###Fishery Length And Age Data
-Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN on May 4, 2017.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data from California for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level, and then aggregated to the state level.  The sample sizes were calculated via the Stewart Method (Ian Stewart, personal communication, IPHC):
+Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN on May 4, 2017.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data from California for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level, and then aggregated to the state level.  The input sample sizes were calculated via the Stewart Method (Ian Stewart, personal communication, IPHC):
 
 \begin{centering}
 
@@ -141,7 +145,7 @@ The above is also the median of the prior. The prior is defined as a lognormal w
 
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by length until larger sizes which are dominated by females who reach a larger maximum size relative to males (Figure \ref{fig:sexratio}), with the sex ratio being approximately equal across ages (Figure \ref{fig:sexratio_Age}), and hence this assessment assumed the sex ratio at birth was 1:1. This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [-@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to 1.0 for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
 
-The fecundity-at-length has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs where $L$ is length in cm. Spawning output at length is shown in Figure \ref{fig:fecundity}.
+The fecundity-at-length has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs where $L$ is length in cm. Fecundity-at-length is shown in Figure \ref{fig:fecundity}.
 
 
 ###Length-Weight Relationship
@@ -199,5 +203,5 @@ Recommendation: The ability to allow different "plus groups" for specific data t
 
 Recommendation: Historical catch reconstruction estimates should be formally reviewed prior to being used in assessments and should be coordinated so that interactions between stocks are appropriately treated. The relative reliability of the catch estimates over time could provide an axis of uncertainty in future assessments.
 
-*STAT response: California and Oregon have undergone extensive work to create historical catch reconstructions.  This is the first assessment for `r spp` which includes a Washington historical catch reconstruction.  The data used in this assessment represent Washington state's current best estimate for historical catches.  Both California and Washington are conducting research to estimate uncertainty surround historical catches which could be used to propegate uncertainty within the assessment.*
+*STAT response: California and Oregon have undergone extensive work to create historical catch reconstructions.  This is the first assessment for `r spp` which includes a Washington historical catch reconstruction.  The data used in this assessment represent Washington state's current best estimate for historical catches.  An historical catch reconstruction meeting was held in November of 2016 were states discussed methods and approaches to improve historical catch estimates.  Additionally, both California and Washington are conducting research to estimate uncertainty surround historical catches which could be used to propegate uncertainty within the assessment.*
 
