--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -6,9 +6,9 @@ Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}
 <!-- ************FISHERY-INDEPENDENT DATA********************************** -->
 <!-- ********************************************************************** -->
 
-##Fishery-Independent Data:
+##Fishery-Independent Data
 
-Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`.  A coast-wide survey of the rockfish resource was conducted in 1977 [@gunderson_distribution_1980] and was repeated every three years through 2004 (referred to as the 'Triennial survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
+Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp` s???.  A coast-wide survey was conducted in 1977 [@gunderson_distribution_1980] and repeated every three years through 2004 (referred to as the 'Triennial shelf survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
 
 Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are highly biased by age 14, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years. Otoliths from fishery-independent and dependent sources that were only surface age reads were excluded from this assessment due to the bias associated with these age reads. 
 
@@ -43,17 +43,17 @@ Length compositions were available for each year the survey was conducted.  No a
 
 The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
-###Triennial Survey
+###Triennial Shelf Survey
 
-The Triennial survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated. The survey design has changed slightly over the period of time. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July.
+The Triennial shelf survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated. The survey design has changed slightly over the period of time. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July.
 
 Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the Triennial series, 2004, the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
 
-Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ N where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial survey was analyzed as a single time-series using data from sampling depths of 55 - 350 m, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
+Given the different depths surveyed during 1977 and the number of water hauls, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters across all years were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ N where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial shelf survey was analyzed as a single time-series using data from sampling depths of 55 - 350 m, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:tri_qq}).  The index shows a decline in abundance in the early years of the time-series and abundance remaining flat for the latter years.  
 
-Length and age compositions were expanded based upon the stratification.  The number of tows with length data ranged from 17 in 1986 to 81 in 1998 (Table \ref{tab:TriennialLengths}).  Ages were read using surface reading methods until 1989 when the break-and-burn method replaced surface reads as the best method to age `r spp`.  Unfortunately, surface reading of `r spp` otoliths results in significant underestimates of age.  Due to this, these otoliths were excluded from analysis.  The available ages from the Triennial survey and the number of tows where otoliths were collected are shown in Table \ref{tab:Triennial_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 1995 (Figure \ref{fig:Tri_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999 and 2000 recruitment (Figure \ref{fig:Tri_Age}).
+Length and age compositions were expanded based upon the stratification.  The number of tows with length data ranged from 17 in 1986 to 81 in 1998 (Table \ref{tab:TriennialLengths}).  Ages were read using surface reading methods until 1989 when the break-and-burn method replaced surface reads as the best method to age `r spp`.  Unfortunately, surface reading of `r spp` otoliths results in significant underestimates of age.  Due to this, these otoliths were excluded from analysis.  The available ages from the Triennial shelf survey and the number of tows where otoliths were collected are shown in Table \ref{tab:Triennial_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 1995 (Figure \ref{fig:Tri_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999 and 2000 recruitment (Figure \ref{fig:Tri_Age}).
 
 The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
@@ -87,7 +87,7 @@ Historical commercial fishery landings of `r spp` were obtained directly from Jo
 
 **At-Sea Hake Fishery**
 
-Catches of `r spp` are monitored aboard the vessel by observers in the At-Sea hake Observer program (ASHOP) and were available for the years of 1975-2016. Observers use a spatial sample design, based on weight, to randomly choose a portion of the haul to sample for species composition. For the last decade, this is typically 30-50% of the total weight. The total weight of the sample is determined by all catch passing over a flow scale. All species other than hake are removed and weighed by species on a motion compensated flatbed scale. Observers record the weights of all non-hake species. Non-hake species total weights are expanded in the database by using the proportion of the haul sampled to the total weight of the haul. The catches of non-hake species in unsampled hauls is determined using bycatch rates determined from sampled hauls. Since 2001, more than 97% of the hauls have been observed and sampled.
+Catches of `r spp` are monitored aboard the vessel by observers in the at-sea hake Observer program (ASHOP) and were available for the years of 1975-2016. Observers use a spatial sample design, based on weight, to randomly choose a portion of the haul to sample for species composition. For the last decade, this is typically 30-50% of the total weight. The total weight of the sample is determined by all catch passing over a flow scale. All species other than hake are removed and weighed by species on a motion compensated flatbed scale. Observers record the weights of all non-hake species. Non-hake species total weights are expanded in the database by using the proportion of the haul sampled to the total weight of the haul. The catches of non-hake species in unsampled hauls is determined using bycatch rates determined from sampled hauls. Since 2001, more than 97% of the hauls have been observed and sampled.
 
 **Foreign Catches**
 
@@ -115,12 +115,12 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 \end{centering}
 
-The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear trends of a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the At-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
+The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear trends of a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
 
-###Length and Age Data not Included in the Base Model
-Research length and ages were provided from Washington state.  However, the information regarding the nature of the research cruise and collection methods have been lost to time.  The data set includes lengths age ages that range from 1967-1972 and 1979.  The distribution of lengths across years collected were consistent with primarily only larger `r spp`, 35-40 cm, being selected.  All age data were based upon surface reads which unfortunately are highly biased at relatively young ages.  Due to the lack of information regarding the collection of these data, they were not selected to be apart of the base model but a sensitivity was conducted which evaluated the impact of these data.
+###Length and Age Data Not Included in the Base Model
+Research length and ages were provided by WDFW.  However, the information regarding the nature of the research cruise and collection methods has been lost to time.  The data set includes lengths and ages that were collected between 1967-1972 and in 1979.  The distribution of lengths across years collected were consistent with primarily only larger `r spp`, 35-40 cm, being selected.  All age data were based upon surface reads which unfortunately are highly biased at relatively young ages for `r spp`.  Due to the lack of information regarding the collection of these data, they were not selected to be apart of the base model but a sensitivity was conducted which evaluated the impact of these data.
 
-Oregon special project data were provided by the state.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data was collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.
+Oregon special project data were provided by ODFW.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data was collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.
 
 <!--************BIOLOGICAL DATA*********************************************-->
 ##Biological Data
