Correction to retro figures

--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -2510,7 +2510,7 @@ Population Ecology team in the FRAM division at the NWFSC.
 \label{tab:Comm_Catch}
 \begin{tabular}{>{\centering}p{.5in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}>{\centering}p{.75in}>{\centering}p{.75in}}
   \hline
-Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
+Year & California & Oregon & Washington & At-Sea Hake & Foreign & Survey \\ 
   \hline
 1892 & 0.0 & 0.1 & 0.0 & 0.0 &  0 & 0.0 \\ 
   1893 & 0.0 & 0.1 & 0.0 & 0.0 &  0 & 0.0 \\ 
@@ -2560,7 +2560,7 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
 \centering
 \begin{tabular}{>{\centering}p{.5in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}>{\centering}p{.75in}>{\centering}p{.75in}}
   \hline
-Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
+Year & California & Oregon & Washington & At-Sea Hake & Foreign & Survey \\ 
   \hline
 1932 & 0.3 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
   1933 & 0.6 & 0.1 & 0.5 & 0.0 &  0 & 0.0 \\ 
@@ -2615,7 +2615,7 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
 \centering
 \begin{tabular}{>{\centering}p{.5in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}>{\centering}p{.75in}>{\centering}p{.75in}}
   \hline
-Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
+Year & California & Oregon & Washington & At-Sea Hake & Foreign & Survey \\ 
   \hline
 1977 & 16.7 & 457.1 & 752.0 & 3.8 &  0 & 11.9 \\ 
   1978 & 42.5 & 498.7 & 1391.5 & 15.4 &  0 & 0.0 \\ 
@@ -4689,7 +4689,7 @@ Pacific ocean perch. \label{fig:sens2_depl}}
 
 \begin{figure}
 \centering
-\includegraphics{Figures/compare1_spawnbio.png}
+\includegraphics{Figures/compare2_spawnbio_uncertainty.png}
 \caption{Retrospective pattern for spawning output.
 \label{fig:retro_sb}}
 \end{figure}
@@ -4698,7 +4698,7 @@ Pacific ocean perch. \label{fig:sens2_depl}}
 
 \begin{figure}
 \centering
-\includegraphics{Figures/compare9_recdevs.png}
+\includegraphics{Figures/compare10_recdevs_uncertainty.png}
 \caption{Retrospective pattern for estimated recruitment deviations.
 \label{fig:retro_recdev}}
 \end{figure}
