--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -8,7 +8,7 @@ Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}
 
 ##Fishery-Independent Data
 
-Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp` s???.  A coast-wide survey was conducted in 1977 [@gunderson_distribution_1980] and repeated every three years through 2004 (referred to as the 'Triennial shelf survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
+Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`.  A coast-wide survey was conducted in 1977 [@gunderson_distribution_1980] and repeated every three years through 2004 (referred to as the 'Triennial shelf survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
 
 Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are highly biased by age 14, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years. Otoliths from fishery-independent and dependent sources that were only surface age reads were excluded from this assessment due to the bias associated with these age reads. 
 
