--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -95,7 +95,7 @@ coast in 2017}
 %\usepackage[space]{grffile}                                      % spaces in file name path
 \usepackage{soul}                                                 % highlight text
 \usepackage{enumitem}                                             % numbered lists
-\usepackage{lineno}                                               % Line numbers; comment out for final
+%\usepackage{lineno}                                               % Line numbers; comment out for final
 \usepackage{upquote}                                              % produce grave accent in latex
 \usepackage{verbatim}                                             % produces verbatim results
 \usepackage{fancyvrb}                                             % verbatim in a box
@@ -110,7 +110,7 @@ coast in 2017}
 %\RequirePackage[tagged]{accessibilityMeta}
 
 
-\linenumbers                                                      % specify use of line numbers
+%\linenumbers                                                      % specify use of line numbers
 
 
 \definecolor{light-gray}{gray}{.85}                               % define light-gray as a color
@@ -310,12 +310,12 @@ information on natural mortality and the steepness of the Beverton-Holt
 stock-recruitment relationship; and estimates of ageing error.
 Recruitment at ``equilibrium spawning output'', length-based selectivity
 of the fisheries and surveys, retention of the fishery, catchability of
-the surveys, growth, the time-series of biomass, age and size structure,
-and current and projected future stock status are outputs of the model.
-Natural mortality and steepness were fixed in the final model. This was
-done due to relatively flat likelihood surfaces, such that fixing
-parameters and then varying them in sensitivity analyses was deemed the
-best way to characterize uncertainty.
+the surveys, growth, the time-series of spawning output, age and size
+structure, and current and projected future stock status are outputs of
+the model. Natural mortality and steepness were fixed in the final
+model. This was done due to relatively flat likelihood surfaces, such
+that fixing parameters and then varying them in sensitivity analyses was
+deemed the best way to characterize uncertainty.
 
 Although there are many types of data available for Pacific ocean perch
 since the 1980s which were used in this assessment, there is little
@@ -544,7 +544,7 @@ ecosystem issues specific to Pacific ocean perch.
 
 This stock assessment estimates that Pacific ocean perch are above the
 management target. Due to reduced landing and the large 2008 year-class,
-an increasing trend in spawning biomass was estimated in the base model.
+an increasing trend in spawning output was estimated in the base model.
 The estimated depletion in 2017 is 74.9\% (\textasciitilde{}95\%
 asymptotic interval: \(\pm\) 53.2\%-96.7\%), corresponding to an
 unfished spawning output of 4993 million eggs (\textasciitilde{}95\%
@@ -570,7 +570,7 @@ Unfished spawning output (million eggs) & 6664.1 &   4756.8 -   8571.5 \\
   Unfished age 3+ biomass (mt) & 140351 & 100391.1 - 180310.9 \\ 
   Unfished recruitment (R0, thousands) & 11698.3 &   8822.7 -  15511.2 \\ 
   Spawning output(2017 million eggs) & 4993.2 &   2244.3 -     7742 \\ 
-  Relative biomass (depletion) (2017) & 0.749 &    0.532 -    0.967 \\ 
+  Relative spawning output (depletion) (2017) & 0.749 &    0.532 -    0.967 \\ 
   \textbf{$\text{Reference points based on } \mathbf{SB_{40\%}}$} &  &  \\ 
   Proxy spawning output ($B_{40\%}$) & 2665.7 &   1902.7 -   3428.6 \\ 
   SPR resulting in $B_{40\%}$ ($SPR_{B40\%}$) & 0.55 &     0.55 -     0.55 \\ 
@@ -949,7 +949,7 @@ below.
 
 Research surveys have been used to provide fishery-independent
 information about the abundance, distribution, and biological
-characteristics of Pacific ocean perch s???. A coast-wide survey was
+characteristics of Pacific ocean perch. A coast-wide survey was
 conducted in 1977 (Gunderson and Sample
 \protect\hyperlink{ref-gunderson_distribution_1980}{1980}) and repeated
 every three years through 2004 (referred to as the `Triennial shelf
